--- a/mops.toml
+++ b/mops.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ic"
-version = "1.0.1"
-description = "IC management canister interface"
+version = "2.0.0"
+description = "IC management canister interface (aaaaa-aa)"
 repository = "https://github.com/ZenVoich/ic"
-keywords = ["ic", "types", "interface"]
+keywords = [ "ic", "types", "interface" ]
 license = "MIT"
