ci: Install dfx, pocket ic v4 is too old

--- a/.github/workflows/mops-test.yml
+++ b/.github/workflows/mops-test.yml
@@ -18,6 +18,11 @@ jobs:
           node-version: 20
       - uses: ZenVoich/setup-mops@v1
 
+      - name: Install dfx
+        uses: dfinity/setup-dfx@main
+      - name: Confirm successful installation
+        run: dfx --version
+
       - name: install mops packages
         run: mops install
 
